# multi-fladdermus

./: .gitignore  .gitmodules  build.sh
fladdermus/: .gitignore  fladdermus.cabal  stack.yaml
fladdermus-client/: README.md  fladdermus-client.cabal  stack.yaml
fladdermus-client/app/: Main.hs
fladdermus-client/src/: Lib.hs
fladdermus-lib/: fladdermus-lib.cabal
fladdermus-lib/src/Fladdermus/: Data.hs
fladdermus/app/: devel.hs
fladdermus/config/: client_session_key.aes  keter.yml
