name:          fladdermus-client
version:       0.1.0.0
synopsis:      Client logic for Fladdermus game
description:   Please see README.md
homepage:      http://github.com/chreekat/multi-fladdermus
license:       BSD3
license-file:  LICENSE
author:        ...
maintainer:    b@chreekat.net
copyright:     BSD3
category:      Web
build-type:    Simple
-- extra-source-files:
cabal-version: >=1.10

library
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  Lib
  build-depends:    base >= 4.7 && < 5
                    , ghcjs-base
  default-language: Haskell2010

executable fladdermus-client-output
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -Wall
  build-depends:    base
                    , ghcjs-base
                    , fladdermus-client
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/chreekat/multi-fladdermus
